# paleobioDB-dataset

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml  update_dataset.yml
.github/workflows/: update_dataset.yml
dataset/: dataset-metadata.json  dinosaur_diversity_over_time.csv
src/: config.yml  fetch.py  push.py
