[project]
name = "paleobiodb-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "kaggle>=2.1.2",
    "kagglehub>=1.0.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.13",
]
